--- a/philo/Makefile
+++ b/philo/Makefile
@@ -30,6 +30,7 @@ UTILS_OBJ		=	$(addprefix $(OBJ_PATH), $(UTIL_FILES:.c=.o))
 
 CC				:=	cc
 CFLAGS			:=	-Wall -Wextra -Werror -MMD -g -pthread -fsanitize=thread -Iincludes 
+# CFLAGS			:=	-Wall -Wextra -Werror -MMD -g -pthread -Iincludes 
 RM				:=	rm -fr
 
 all				:	$(NAME)
